Load nearby places from the geoserve webservice

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -1,6 +1,7 @@
 @import 'htdocs/css/_alert.scss';  /* from hazdev-template */
 
 @import 'accordion/Accordion.scss';
+@import 'geoserve/_NearbyCitiesView.scss';
 @import 'mvc/ModalView.scss';
 @import 'mvc/DownloadView.scss';
 @import 'tablist/TabList.scss';
