--- a/src/htdocs/modules/scientific/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/_HypocenterPage.scss
@@ -66,7 +66,12 @@
 }
 
 .networkmagnitude {
-  margin: 1em 0 0;
+  margin: 0;
+  border-top: 1px solid #ddd;
+
+  &:first-child {
+    border: none;
+  }
 
   > .accordion-content {
     background-color: #fff;
