remove excess padding from last magnitude in list

--- a/src/htdocs/modules/scientific/_HypocenterPage.scss
+++ b/src/htdocs/modules/scientific/_HypocenterPage.scss
@@ -73,6 +73,10 @@
     border: none;
   }
 
+  &:last-child {
+    padding-bottom: 0.5em;
+  }
+
   > .accordion-content {
     background-color: #fff;
   }
