Added styles to summary page.

--- a/src/htdocs/modules/base/index.scss
+++ b/src/htdocs/modules/base/index.scss
@@ -1,3 +1,4 @@
 /* This file should import partials for the base module/modulepages. */
 
 @import '_ProductSummarizer.scss';
+@import '_SummaryPage.scss';
