--- a/src/htdocs/modules/base/_SummaryPage.scss
+++ b/src/htdocs/modules/base/_SummaryPage.scss
@@ -13,6 +13,10 @@
       color: #999;
       white-space: nowrap;
 
+      > img {
+        max-height: 3em;
+      }
+
       &:first-child {
         padding-left: 2.25em;
       }
