Scaffold out the Intensity vs Distance plots for the DYFI page

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -5,6 +5,9 @@
 @import 'mvc/DownloadView.scss';
 @import 'tablist/TabList.scss';
 @import 'svgimagemap/SvgImageMap.scss';
+@import 'd3/_D3BaseView.scss';
+@import 'd3/_D3lineView.scss';
+@import 'd3/_D3View.scss';
 
 @import '_event-header.scss';
 @import '_event-footer.scss';
