Using same quality statements across all pages. Removing old source contribution statement.

--- a/src/htdocs/modules/base/index.scss
+++ b/src/htdocs/modules/base/index.scss
@@ -1,4 +1,5 @@
 /* This file should import partials for the base module/modulepages. */
 
+@import '_EventModule.scss';
 @import '_ProductSummarizer.scss';
 @import '_SummaryPage.scss';
