plot all points, and style colors

--- a/src/htdocs/modules/impact/_DYFIPage.scss
+++ b/src/htdocs/modules/impact/_DYFIPage.scss
@@ -60,3 +60,36 @@
 .dyfi-response-distance {
   text-align: center;
 }
+
+.estimated1 > .line {
+  stroke: #D65617; /* orange */
+  stroke-width: 1;
+}
+
+.estimated2 > .line {
+  stroke: #5FCE3B; /* green */
+  stroke-width: 1;
+}
+
+.scatterplot1 > .point {
+  stroke-width: 0;
+  fill: #94BCEA; /* blue */
+}
+
+.median > .point {
+  stroke: #000;
+  stroke-width: 0.5;
+  fill: #FE4D55; /* red */
+}
+
+.binned > .point {
+  stroke: #000;
+  stroke-width: 0.5;
+  fill: #8D91FF; /* purple */
+}
+
+.legend-content > .scatterplot1 > .line,
+.legend-content > .median > .line,
+.legend-content > .binned > .line {
+  stroke-width: 0;
+}
