Added div to stop leaflet from overriding local css, also changed zoom control's to be the same 'black' as the other controls.  Deleted css styles that were already being set by leaflet.

--- a/src/htdocs/css/_MousePosition.scss
+++ b/src/htdocs/css/_MousePosition.scss
@@ -11,12 +11,7 @@
   float: left;
 }
 
-.leaflet-control-scale-line {
-  font-size: 11px;
-}
-
-.leaflet-control-scale-line {
-  border: 2px solid #000;
+div.leaflet-control-scale-line {
   border-top: 0;
   box-shadow: none !important;
   line-height: 1;
@@ -24,7 +19,6 @@
 
 .leaflet-control-scale-line:nth-child(2) {
   border-bottom: 0px;
-  border-top: 2px solid #000;
   margin-top: -2px;
   padding-top: 1px;
 }
@@ -33,4 +27,12 @@
   margin-bottom: 10px;
   margin-left: 10px;
   vertical-align: bottom;
+}
+
+a.leaflet-control-zoom-in {
+  color: #333;
+}
+
+a.leaflet-control-zoom-out {
+  color: #333;
 }
