Update the standard deviation range in the legend to match the plotting on the graph

--- a/src/htdocs/modules/impact/_DYFIPage.scss
+++ b/src/htdocs/modules/impact/_DYFIPage.scss
@@ -88,7 +88,8 @@
   fill: #8D91FF; /* purple */
 }
 
-.standard-deviation {
+.standard-deviation,
+.binned > .line {
   stroke: black;
   stroke-width: 0.5;
 }
