Fix import typo

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -5,7 +5,7 @@
 @import 'mvc/DownloadView.scss';
 @import 'tablist/TabList.scss';
 @import 'svgimagemap/SvgImageMap.scss';
-@import 'd3/_D3lineView.scss';
+@import 'd3/_D3LineView.scss';
 @import 'd3/_D3View.scss';
 
 @import '_event-header.scss';
