added event-header, mmi-variables, DYFIResponsesView, and ModalView to help DYFIResponsesView

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -1,3 +1,9 @@
+
 @import 'accordion/Accordion.scss';
 @import 'core/_DownloadView.scss';
 @import 'general/_ShakeMapStationList.scss';
+@import 'dyfi/_DYFIResponsesView.scss';
+@import 'mvc/ModalView.scss';
+
+@import '_event-header.scss';
+@import '_mmi-variables.scss';
