--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -24,6 +24,7 @@
 @import 'core/_Module.scss';
 @import 'core/_TextProductView.scss';
 
+@import 'dyfi/_DYFIFormView.scss';
 @import 'dyfi/_DYFIIntensityGraphView.scss';
 @import 'dyfi/_DYFIResponsesView.scss';
 
