--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -1,6 +1,7 @@
 
 @import 'accordion/Accordion.scss';
 @import 'core/_DownloadView.scss';
+@import 'core/_Formatter.scss';
 @import 'dyfi/_DYFIIntensityGraphView.scss';
 @import 'dyfi/_DYFIResponsesView.scss';
 @import 'shakemap/_ShakeMapStationList.scss';
