--- a/src/htdocs/css/shakemap/_ShakeMapStationList.scss
+++ b/src/htdocs/css/shakemap/_ShakeMapStationList.scss
@@ -23,11 +23,10 @@
     text-align: center;
     width: 25%;
 
-    > span {
+     > span {
       display: block;
-      max-width: 100%; /* override styles from dyfi responses */
-      padding: 0; /* override styles from dyfi responses */
-    }
+      max-width: 100%;
+     }
 
     > abbr {
       color: #999;
@@ -47,21 +46,6 @@
 
   > :last-child {
     padding-bottom: 1em;
-  }
-}
-
-.station-summary > li {
-
-  &.mmi {
-    border-radius: 2px;
-    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
-    color: #000;
-    padding: 0.5em 0;
-    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
-
-    > abbr {
-      color: #666;
-    }
   }
 }
 
