Added styles for PAGERView, cleaned up code, and updated comments

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -19,6 +19,10 @@
 @import 'dyfi/_DYFIIntensityGraphView.scss';
 @import 'dyfi/_DYFIResponsesView.scss';
 
+@import 'losspager/_PAGERView.scss';
+@import 'shakemap/_ShakeMapStationList.scss';
+@import 'mvc/ModalView.scss';
+
 @import 'map/_DyfiUtmLayer.scss';
 @import 'map/_InteractiveMapModule.scss';
 @import 'map/_InteractiveMapView.scss';
