--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -1,11 +1,22 @@
-
+/* Library styles */
 @import 'accordion/Accordion.scss';
-@import 'core/_DownloadView.scss';
-@import 'core/_Formatter.scss';
-@import 'dyfi/_DYFIIntensityGraphView.scss';
-@import 'dyfi/_DYFIResponsesView.scss';
-@import 'shakemap/_ShakeMapStationList.scss';
+
 @import 'mvc/ModalView.scss';
 
+@import 'svgimagemap/SvgImageMap.scss';
+
+@import 'tablist/TabList.scss';
+
+/* Generalized styles */
 @import '_event-header.scss';
 @import '_mmi-variables.scss';
+
+/* Project styles */
+@import 'core/_DownloadView.scss';
+@import 'core/_Formatter.scss';
+
+@import 'dyfi/_DYFIIntensityGraphView.scss';
+@import 'dyfi/_DYFIResponsesView.scss';
+
+@import 'shakemap/_ShakeMapStationList.scss';
+
