Updated module to have a footer method similar to header. This will generate download content. Integrated DYFIModule into EventPage.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -14,6 +14,7 @@
 /* Project styles */
 @import 'core/_DownloadView.scss';
 @import 'core/_Formatter.scss';
+@import 'core/_Module.scss';
 
 @import 'dyfi/_DYFIIntensityGraphView.scss';
 @import 'dyfi/_DYFIResponsesView.scss';
