Added styles. Using new example event to view station table. Updated some markup.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -24,4 +24,6 @@
 @import 'map/_InteractiveMapView.scss';
 @import 'map/_ShakeMapStationLayer.scss';
 
+@import 'origin/_MagnitudesView.scss';
+
 @import 'shakemap/_ShakeMapStationList.scss';
