--- a/src/htdocs/css/core/_Formatter.scss
+++ b/src/htdocs/css/core/_Formatter.scss
@@ -1,13 +1,10 @@
 @import '../_mmi-variables.scss';
 
+.bubble,
 .mmi {
-  border-radius: 2px;
-  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
   display: block;
   line-height: 1;
-  padding: 0.5em 0;
   text-align: center;
-  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 
   > span {
     display: block;
@@ -19,6 +16,14 @@
     color: #666;
     font-size: 0.8em;
   }
+}
+
+.bubble-border,
+.mmi {
+  border-radius: 2px;
+  box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.5);
+  padding: 0.5em 0;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
 }
 
 .roman {
