Update OriginView.scss to _OriginView.scss

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -24,10 +24,7 @@
 @import 'map/_InteractiveMapView.scss';
 @import 'map/_ShakeMapStationLayer.scss';
 
-<<<<<<< f2c054731dc601886d3f5fea3e946098476c015d
 @import 'origin/_MagnitudesView.scss';
-=======
-@import 'origin/OriginView.scss';
->>>>>>> Add Origin detail table to OriginView
+@import 'origin/_OriginView.scss';
 
 @import 'shakemap/_ShakeMapStationList.scss';
