Added styles and tests.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -30,5 +30,6 @@
 
 @import 'origin/_MagnitudesView.scss';
 @import 'origin/_OriginView.scss';
+@import 'origin/_PhasesView.scss';
 
 @import 'shakemap/_ShakeMapStationList.scss';
