--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -19,6 +19,8 @@
 @import 'dyfi/_DYFIIntensityGraphView.scss';
 @import 'dyfi/_DYFIResponsesView.scss';
 
+@import 'general/_LocationMap.scss';
+
 @import 'losspager/_PAGERView.scss';
 @import 'shakemap/_ShakeMapStationList.scss';
 @import 'mvc/ModalView.scss';
