Added styling for text products that have floating content.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -15,6 +15,7 @@
 @import 'core/_DownloadView.scss';
 @import 'core/_Formatter.scss';
 @import 'core/_Module.scss';
+@import 'core/_TextProductView.scss';
 
 @import 'dyfi/_DYFIIntensityGraphView.scss';
 @import 'dyfi/_DYFIResponsesView.scss';
