Add quick summary bubbles to event page header

--- a/src/htdocs/css/_event-header.scss
+++ b/src/htdocs/css/_event-header.scss
@@ -1,6 +1,12 @@
-.event-header {
 
+.event-header {
   > .impact-bubbles {
+
+    &:after {
+      clear: both;
+      content: ' ';
+      display: block;
+    }
 
     > a {
       background-color: #fff;
@@ -35,6 +41,8 @@
 
       > strong {
         font-size: .8125em;
+        /* for pager "pending" alert level */
+        white-space: nowrap;
       }
     }
 
