--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -1,6 +1,12 @@
 /* Library styles */
 @import 'accordion/Accordion.scss';
 
+@import 'leaflet/control/_Control.scss';
+@import 'leaflet/control/_HazDevLayers.scss';
+@import 'leaflet/control/_MousePosition.scss';
+@import 'leaflet/control/_Scale.scss';
+@import 'leaflet/control/_Zoom.scss';
+
 @import 'mvc/ModalView.scss';
 
 @import 'svgimagemap/SvgImageMap.scss';
