Hid the datatable button that pops up the download modal box. Needs to be removed permenantly in the datatable

--- a/src/htdocs/css/dyfi/_DYFIResponsesView.scss
+++ b/src/htdocs/css/dyfi/_DYFIResponsesView.scss
@@ -32,3 +32,12 @@
 .dyfi-response-distance {
   text-align: center;
 }
+
+.datatable-tools > button {
+  display: none;
+}
+
+.download-link {
+  margin-top: 1em;
+  display:block;
+}
