Added min width so mmi bubbles are squished.

--- a/src/htdocs/css/core/_Module.scss
+++ b/src/htdocs/css/core/_Module.scss
@@ -58,6 +58,7 @@
       background-color: #fff;
       color: #999;
       font-weight: 400;
+      min-width: 4em;
       white-space: nowrap;
 
       > img {
