Add MouseOverLayer styles for interactive map

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -6,6 +6,7 @@
 @import 'leaflet/control/_MousePosition.scss';
 @import 'leaflet/control/_Scale.scss';
 @import 'leaflet/control/_Zoom.scss';
+@import 'leaflet/layer/_MouseOverLayer.scss';
 
 @import 'mvc/ModalView.scss';
 
