Changed a conflict between the General Summary page and LocationView

--- a/src/htdocs/css/general/_LocationMap.scss
+++ b/src/htdocs/css/general/_LocationMap.scss
@@ -15,7 +15,7 @@
   padding-bottom: 100%;
   position: relative;
 
-  > div {
+  > .interactive-map-view {
     left: 0;
     height: 100%;
     pointer-events: none;
