--- a/src/htdocs/css/core/_Module.scss
+++ b/src/htdocs/css/core/_Module.scss
@@ -10,6 +10,10 @@
   margin-top: .5em;
 }
 
+.current-module {
+  font-weight: bold;
+}
+
 .quality-statements {
   color: #999;
   font-size: .75em;
