--- a/src/htdocs/css/shakemap/_ShakeMapStationList.scss
+++ b/src/htdocs/css/shakemap/_ShakeMapStationList.scss
@@ -32,6 +32,10 @@
       color: #999;
       font-size: 0.8em;
     }
+
+    & + li {
+      padding-top: 0.5em;
+    }
   }
 }
 
@@ -51,8 +55,4 @@
 
 .station-metadata  {
   font-size: 0.88em;
-
-  > dt {
-    margin: 1em 0 0;
-  }
 }
