--- a/src/htdocs/css/dyfi/_DYFIFormView.scss
+++ b/src/htdocs/css/dyfi/_DYFIFormView.scss
@@ -1,16 +1,5 @@
-@import 'mvc/ModalView.scss';
 
-@import 'locationview/_controls.scss';
-@import 'locationview/CoordinateControl.scss';
-@import 'locationview/GeocodeControl.scss';
-@import 'locationview/GeolocationControl.scss';
-@import 'locationview/LeafletControls.scss';
-@import 'locationview/LocationControl.scss';
-@import 'locationview/LocationView.scss';
-@import 'locationview/PointControl.scss';
-
-@import 'questionview/_QuestionView.scss';
-@import 'TextQuestionViews.scss';
+@import '_TextQuestionViews.scss';
 
 .felt-header {
   border-bottom: 1px solid #ddd;
