Increase size of Felt Report header. Position OMB number in top-right corner of form

--- a/src/htdocs/css/dyfi/_DYFIFormView.scss
+++ b/src/htdocs/css/dyfi/_DYFIFormView.scss
@@ -55,3 +55,14 @@
     font-weight: normal;
   }
 }
+
+.dyfi-form-header {
+  position: relative;
+}
+
+.omb-number {
+  font-size: 0.77em;
+  position: absolute;
+  right: 1em;
+  top: -1em;
+}
