Moved import out of DYFIFormView, fixed a merge conflict resolution problem.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -54,6 +54,7 @@
 @import 'origin/_PhasesView.scss';
 
 @import 'questionview/_QuestionView.scss';
+@import 'dyfi/_TextQuestionViews.scss';
 
 @import 'shakemap/_ShakeMapStationList.scss';
 
