--- a/src/htdocs/css/general/_LocationMap.scss
+++ b/src/htdocs/css/general/_LocationMap.scss
@@ -9,7 +9,7 @@
 
 .locationview-map {
   display: block;
-  max-height: 512px;
+  height: 0;
   max-width: 100%;
   /* padding-bottom sets height responsively based on width. */
   padding-bottom: 100%;
