--- a/src/htdocs/css/dyfi/_DYFIIntensityGraphView.scss
+++ b/src/htdocs/css/dyfi/_DYFIIntensityGraphView.scss
@@ -1,6 +1,10 @@
 @import 'd3/_D3LineView.scss';
 @import 'd3/_D3View.scss';
 
+.IntensityGraphView {
+  margin: 1em 0 0;
+}
+
 .estimated1 > .line {
   stroke: #D65617; /* orange */
   stroke-width: 1;
