Reset table cell background colors without masking the horizontal scrolling styles

--- a/src/htdocs/css/core/_Module.scss
+++ b/src/htdocs/css/core/_Module.scss
@@ -59,7 +59,7 @@
   > tbody {
     > tr > th,
     > tr > td {
-      background-color: #fff;
+      background-color: rgba(0,0,0,0);
       color: #999;
       font-weight: 400;
       min-width: 4em;
