--- a/src/htdocs/css/core/_Module.scss
+++ b/src/htdocs/css/core/_Module.scss
@@ -17,7 +17,7 @@
 .quality-statements {
   color: #999;
   font-size: .75em;
-  margin-top: 0;
+  margin-top: 0.5em;
 
   > li {
     padding-left: 1.25em;
@@ -49,7 +49,6 @@
 .table-summary {
   > thead {
     > tr th {
-
       > small {
         color: #666;
         font-weight: normal;
