Add top margin to images in the tablists

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -33,6 +33,7 @@
 @import 'core/_Module.scss';
 @import 'core/_TextProductView.scss';
 
+@import 'dyfi/_DYFIView.scss';
 @import 'dyfi/_DYFIFormView.scss';
 @import 'dyfi/_DYFIIntensityGraphView.scss';
 @import 'dyfi/_DYFIResponsesView.scss';
