Implemented header and link product support to augment the boiler plate data.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -62,6 +62,7 @@
 @import 'moment-tensor/_MomentTensorPinView.scss';
 
 @import 'oaf/_ForecastTableView.scss';
+@import 'oaf/_OafModule.scss';
 
 @import 'origin/_MagnitudesView.scss';
 @import 'origin/_OriginPinView.scss';
