Added separator between forecast time ranges in table output.

--- a/src/htdocs/css/oaf/_ForecastTableView.scss
+++ b/src/htdocs/css/oaf/_ForecastTableView.scss
@@ -1,5 +1,8 @@
 .oaf-forecast-table-view {
   > div > table {
+    border-bottom: 1px solid #efefef;
+    border-right: 1px solid #efefef;
+
     > thead {
       > tr > th {
         text-align: center;
@@ -8,8 +11,15 @@
     }
 
     > tbody {
+      > tr + .separator > th,
+      > tr + .separator > td {
+        border-top: 1px solid #999;
+      }
+
       > tr > th,
       > tr > td {
+        border-bottom: none;
+        border-right: none;
         text-align: center;
       }
 
