--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -28,6 +28,7 @@
 @import '_mmi-variables.scss';
 
 /* Project styles */
+@import 'core/_BasicPinView.scss';
 @import 'core/_DownloadView.scss';
 @import 'core/_Formatter.scss';
 @import 'core/_Module.scss';
