Lighten up the footer. Ensure layout remains consistent with varying content.

--- a/src/htdocs/css/core/_BasicPinView.scss
+++ b/src/htdocs/css/core/_BasicPinView.scss
@@ -11,7 +11,15 @@
   > .pin-header,
   > .pin-content,
   > .pin-footer {
+    overflow: hidden;
     padding: 0.5em;
+  }
+
+  > .pin-header,
+  > .pin-footer {
+    flex-shrink: 0;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   > .pin-header {
@@ -20,10 +28,13 @@
 
   > .pin-content {
     flex-grow: 1;
+    margin: 0.5em 0;
+    max-height: 100%;
+    padding: 0 0.5em;
   }
 
   > .pin-footer {
-    color: #555;
+    color: #666;
     font-size: 0.88em;
     position: relative;
     text-align: center;
