Update to use margin with overflow hidden

--- a/src/htdocs/css/core/_TextProductPinView.scss
+++ b/src/htdocs/css/core/_TextProductPinView.scss
@@ -5,9 +5,10 @@
   }
 
   .pin-content {
-    margin: 0;
+    /* use margin top/bottom with overflow hidden */
+    margin: 1em 0;
     overflow: hidden;
-    padding: 1em 0.5em;
+    padding: 0 0.5em;
     position: relative;
 
     > :after {
