added origin pin view

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -51,6 +51,7 @@
 @import 'map/_ShakeMapStationLayer.scss';
 
 @import 'origin/_MagnitudesView.scss';
+@import 'origin/_OriginPinView.scss';
 @import 'origin/_OriginView.scss';
 @import 'origin/_PhasesView.scss';
 
