Create scaffold for PAGERPinView

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -43,6 +43,7 @@
 @import 'general/_GeneralSummary.scss';
 @import 'general/_LocationMap.scss';
 
+@import 'losspager/_PAGERPinView.scss';
 @import 'losspager/_PAGERView.scss';
 
 @import 'map/_DyfiUtmLayer.scss';
