--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -59,6 +59,7 @@
 
 @import 'questionview/_QuestionView.scss';
 
+@import 'shakemap/_ShakeMapPinView.scss';
 @import 'shakemap/_ShakeMapStationList.scss';
 
 @import 'waveform/_WaveformModule.scss';
