--- a/src/htdocs/css/origin/_OriginPinView.scss
+++ b/src/htdocs/css/origin/_OriginPinView.scss
@@ -1,34 +1,36 @@
-.origin-pin-badge {
+.origin-pin {
   text-align: center;
+}
 
-  > a {
-    background-color: #fff;
-    background-image: linear-gradient(to top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
-    box-shadow: inset 0 0 1px rgba(0,0,0,0.5);
-    color: #333;
-    display: block;
-    margin: 0.5em 0 0;
-    overflow: hidden;
-    padding: 6px 0;
-    text-align: center;
-    text-decoration: none;
-    text-overflow: ellipsis;
+.origin-pin-badge {
+  background-image: linear-gradient(to top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
+  box-shadow: inset 0 0 1px rgba(0,0,0,0.5);
+  display: block;
+  //margin: 0.5em 0 0;
+  text-decoration: none;
 
-    > strong {
-      font-size: 1.5em;
-    }
+  width: 50%;
+  margin: 1.5em auto;
+  padding: .3em 0 .2em 0;
+  line-height: 1em;
+  border-radius: 3px;
+}
 
-    > abbr {
-      font-size: .9em;
-    }
-  }
+.origin-magnitude {
+  color: #333;
+  //font-size: 1.5em;
+}
+
+.origin-magnitude-type {
+  color: #333;
+  font-size: .6875em;
 }
 
 .origin-review-status {
   margin-top: 3em;
   text-align: center;
+}
 
-  > abbr {
-    font-size: .8em;
-  }
+.origin-review-status-abbr {
+  font-size: .8em;
 }
