changed markup and edited styles

--- a/src/htdocs/css/origin/_OriginPinView.scss
+++ b/src/htdocs/css/origin/_OriginPinView.scss
@@ -8,7 +8,7 @@
   display: block;
   //margin: 0.5em 0 0;
   text-decoration: none;
-
+  text-align: center;
   width: 50%;
   margin: 1.5em auto;
   padding: .3em 0 .2em 0;
