Update BasicPinView to add module specific classes. Scope styles with direct descendent selectors. Include defaults in PAGERPinView

--- a/src/htdocs/css/losspager/_PAGERPinView.scss
+++ b/src/htdocs/css/losspager/_PAGERPinView.scss
@@ -1,17 +1,14 @@
 
-.pager-pin-view {
+.pager-pin-content {
 
-  .pin-content {
+  > h3 {
+    font-size: 0.77em;
+    font-weight: normal;
+    margin-top: 0.5em;
+  }
 
-    > h3 {
-      font-size: 0.77em;
-      font-weight: normal;
-      margin-top: 0.5em;
-    }
-
-    > figure {
-      width: 70%;
-      margin: 0.5em auto;
-    }
+  > figure {
+    width: 70%;
+    margin: 0.5em auto;
   }
 }
