--- a/src/htdocs/css/shakemap/_ShakeMapPinView.scss
+++ b/src/htdocs/css/shakemap/_ShakeMapPinView.scss
@@ -1,25 +1,16 @@
 .shakemap-pin-badge {
+  background-image: linear-gradient(to top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
+  border-radius: 3px;
+  box-shadow: inset 0 0 1px rgba(0,0,0,0.5);
+  display: block;
+  line-height: 1em;
+  margin: auto;
+  padding: .3em 0 .2em 0;
   text-align: center;
+  text-decoration: none;
+  width: 50%;
+}
 
-  > a {
-    background-color: #fff;
-    background-image: linear-gradient(to top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
-    box-shadow: inset 0 0 1px rgba(0,0,0,0.5);
-    color: #333;
-    display: block;
-    margin: 0.5em 0 0;
-    overflow: hidden;
-    padding: 6px 0;
-    text-align: center;
-    text-decoration: none;
-    text-overflow: ellipsis;
-
-    > strong {
-      font-size: 1.5em;
-    }
-
-    > abbr {
-      font-size: .7em;
-    }
-  }
+.shakemap-max-mmi {
+  font-size: .6875em;
 }
