Add basemap image to FiniteFaultPinView. Add styles for FiniteFaultPinView

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -40,6 +40,8 @@
 @import 'dyfi/_DYFIResponsesView.scss';
 @import 'dyfi/_TextQuestionViews.scss';
 
+@import 'finite-fault/_FiniteFaultPinView.scss';
+
 @import 'general/_ExecutiveSummaryModule.scss';
 @import 'general/_GeneralSummary.scss';
 @import 'general/_LocationMap.scss';
