Create scaffolding for DYFIPinView

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -34,6 +34,7 @@
 @import 'core/_Module.scss';
 @import 'core/_TextProductView.scss';
 
+@import 'dyfi/_DYFIPinView.scss';
 @import 'dyfi/_DYFIView.scss';
 @import 'dyfi/_DYFIFormView.scss';
 @import 'dyfi/_DYFIIntensityGraphView.scss';
