Added some styles. Fixing up the map.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -47,6 +47,7 @@
 @import 'general/_ExecutiveSummaryModule.scss';
 @import 'general/_GeneralSummary.scss';
 @import 'general/_LocationMap.scss';
+@import 'general/_RegionalInfoModule.scss';
 
 @import 'losspager/_PAGERPinView.scss';
 @import 'losspager/_PAGERView.scss';
