--- a/src/htdocs/css/general/_ExecutiveSummaryModule.scss
+++ b/src/htdocs/css/general/_ExecutiveSummaryModule.scss
@@ -19,7 +19,7 @@
 
 @media screen and (min-width: 31em) {
   .executive-summary-pins {
-    margin: 0 0 1em -1em;
+    margin: -1em 0 1em -1em;
   }
 
   .executive-summary-pin {
