--- a/src/htdocs/css/origin/_OriginPinView.scss
+++ b/src/htdocs/css/origin/_OriginPinView.scss
@@ -1,21 +1,3 @@
-.origin-pin-badge {
-  background-image: linear-gradient(to top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
-  border-radius: 3px;
-  box-shadow: inset 0 0 1px rgba(0,0,0,0.5);
-  display: block;
-  line-height: 1em;
-  margin: 1.5em auto;
-  padding: .3em 0 .2em 0;
-  text-align: center;
-  text-decoration: none;
-  width: 50%;
-}
-
-.origin-magnitude-type {
-  font-size: .6875em;
-}
-
-.origin-review-status {
-  margin-top: 3em;
-  text-align: center;
+.origin-pin-view {
+  font-size: .9em;
 }
