Added some styles. Resized beachball. Cleaned up rendering.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -58,6 +58,8 @@
 @import 'map/_InteractiveMapView.scss';
 @import 'map/_ShakeMapStationLayer.scss';
 
+@import 'moment-tensor/_MomentTensorPinView.scss';
+
 @import 'origin/_MagnitudesView.scss';
 @import 'origin/_OriginPinView.scss';
 @import 'origin/_OriginView.scss';
