--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -50,6 +50,8 @@
 @import 'general/_NearbyPlacesView.scss';
 @import 'general/_RegionalInfoModule.scss';
 
+@import 'impact/_ImpactPinView.scss';
+
 @import 'losspager/_PAGERPinView.scss';
 @import 'losspager/_PAGERView.scss';
 
