Created focal mechanism pin view, example and tests.

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -44,6 +44,8 @@
 
 @import 'finite-fault/_FiniteFaultPinView.scss';
 
+@import 'focal-mechanism/_FocalMechanismPinView.scss';
+
 @import 'general/_ExecutiveSummaryModule.scss';
 @import 'general/_GeneralSummary.scss';
 @import 'general/_LocationMap.scss';
