--- a/src/htdocs/css/finite-fault/_FiniteFaultPinView.scss
+++ b/src/htdocs/css/finite-fault/_FiniteFaultPinView.scss
@@ -1,6 +1,15 @@
 
-.finite-fault-basemap {
-  margin: 1em 0 0;
-  /* This is used to visually align the image */
-  padding-right: 0.75em;
+.finite-fault-pin-content {
+
+  > h3 {
+    font-size: 0.77em;
+    font-weight: normal;
+    margin-top: 0.5em;
+  }
+
+  > img {
+    display: block;
+    margin: auto;
+    width: 90%;
+  }
 }
