--- a/src/htdocs/css/dyfi/_DYFIFormPinView.scss
+++ b/src/htdocs/css/dyfi/_DYFIFormPinView.scss
@@ -1,16 +1,32 @@
 
 .dyfi-responses-badge {
-  background-image: linear-gradient(to top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
-  border-radius: 3px;
-  box-shadow: inset 0 0 1px rgba(0,0,0,0.5);
-  display: block;
-  line-height: 1em;
-  margin: 1.5em auto;
-  padding: 1em;
-  text-align: center;
-  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  margin: 1.5em 0 0;
+}
 
-  > abbr {
-    font-size: 0.6875em
+.dyfi-responses-abbr {
+  color: #777;
+  font-size: 0.77em;
+  margin: 0.5em 0 2em;
+  text-align: center;
+}
+
+.responses-digit {
+  background-image: linear-gradient(to top, rgba(0,0,0,0.1) 0%, rgba(0,0,0,0) 100%);
+  border: 1px solid #ccc;
+  border-right: none;
+  display: inline-block;
+  padding: 0.5em 0.3em;
+
+  &:first-child {
+    border-bottom-left-radius: 2px;
+    border-top-left-radius: 2px;
+  }
+
+  &:last-child {
+    border-bottom-right-radius: 2px;
+    border-top-right-radius: 2px;
+    border-right: 1px solid #ccc;
   }
 }
