--- a/src/htdocs/css/losspager/_PAGERPinView.scss
+++ b/src/htdocs/css/losspager/_PAGERPinView.scss
@@ -1,14 +1,15 @@
 
 .pager-pin-content {
 
-  > h3 {
-    font-size: 0.77em;
-    font-weight: normal;
-    margin-top: 0.5em;
+  > span {
+    display: block;
+    font-size: 0.88em;
+    margin: 0.5em 0;
   }
 
-  > figure {
-    width: 70%;
+  > img {
+    display: block;
     margin: 0.5em auto;
+    width: 70%;
   }
 }
