Add pager bubble to header of PAGERPinView

--- a/src/htdocs/css/losspager/_PAGERPinView.scss
+++ b/src/htdocs/css/losspager/_PAGERPinView.scss
@@ -13,3 +13,11 @@
     width: 70%;
   }
 }
+
+.pager-bubble {
+  border-radius: 2px;
+  display: inline-block;
+  float: right;
+  font-size: 0.77em;
+  padding: 3px 18px;
+}
