--- a/src/htdocs/css/dyfi/_DYFIFormPinView.scss
+++ b/src/htdocs/css/dyfi/_DYFIFormPinView.scss
@@ -17,7 +17,7 @@
   border: 1px solid #ccc;
   border-right: none;
   display: inline-block;
-  padding: 0.5em 0.3em;
+  padding: 0.5em;
 
   &:first-child {
     border-bottom-left-radius: 2px;
