--- a/src/htdocs/css/general/_RegionalInfoModule.scss
+++ b/src/htdocs/css/general/_RegionalInfoModule.scss
@@ -28,7 +28,8 @@
   margin-top: 0;
 }
 
-.regional-info-module-admin > li > strong {
+.regional-info-module-admin > li > strong,
+.regional-info-module-fe > li > strong {
   color: #666;
   display: inline-block;
   font-size: 0.88em;
