Create scaffolding for RegionalInfoPinView

--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -51,6 +51,7 @@
 @import 'general/_LocationMap.scss';
 @import 'general/_NearbyPlacesView.scss';
 @import 'general/_RegionalInfoModule.scss';
+@import 'general/_RegionalInfoPinView.scss';
 
 @import 'losspager/_PAGERPinView.scss';
 @import 'losspager/_PAGERView.scss';
