Using pointer cursor on maps inside pin content even when map is not itself clickable (because the pin is still clickable).

--- a/src/htdocs/css/core/_BasicPinView.scss
+++ b/src/htdocs/css/core/_BasicPinView.scss
@@ -40,6 +40,10 @@
   margin: 0.5em 0;
   max-height: 100%;
   padding: 0 0.5em;
+
+  > .leaflet-container {
+    cursor: pointer;
+  }
 }
 
 .pin-footer {
