Looking for slip image more aggressively. Changed markup and styles to match other pins on page.

--- a/src/htdocs/css/finite-fault/_FiniteFaultPinView.scss
+++ b/src/htdocs/css/finite-fault/_FiniteFaultPinView.scss
@@ -1,10 +1,10 @@
 
 .finite-fault-pin-content {
 
-  > h3 {
-    font-size: 0.77em;
-    font-weight: normal;
-    margin-top: 0.5em;
+  > span {
+    display: block;
+    font-size: 0.88em;
+    margin: 0.5em 0 1em;
   }
 
   > img {
