--- a/src/htdocs/css/general/_RegionalInfoModule.scss
+++ b/src/htdocs/css/general/_RegionalInfoModule.scss
@@ -20,11 +20,11 @@
   margin-top: 0;
 }
 
-.regional-info-module-places > small {
+.regional-info-module-regions > small {
   color: #666;
 }
 
-.regional-info-module-regions > :first-child {
+.regions-places > :first-child > h3 {
   margin-top: 0;
 }
 
