Update nearby places small text to be more compact

--- a/src/htdocs/css/general/_RegionalInfoModule.scss
+++ b/src/htdocs/css/general/_RegionalInfoModule.scss
@@ -20,8 +20,8 @@
   margin-top: 0;
 }
 
-.regional-info-module-regions > small {
-  color: #666;
+.regional-info-module-places > small {
+  display: block;
 }
 
 .regions-places > :first-child > h3 {
