--- a/src/htdocs/css/general/_GeneralSummary.scss
+++ b/src/htdocs/css/general/_GeneralSummary.scss
@@ -28,81 +28,81 @@
   }
 
   &.aleutian {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/aleutian_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/aleutian_tsum304.jpg');
     height: 196px;
   }
 
 
   &.caribbean {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/caribbean_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/caribbean_tsum304.jpg');
     height: 204px;
   }
 
 
   &.emaustralia {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/emaustralia_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/emaustralia_tsum304.jpg');
     height: 432px;
   }
 
 
   &.himalaya {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/himalaya_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/himalaya_tsum304.jpg');
     height: 204px;
   }
 
 
   &.japan {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/japan_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/japan_tsum304.jpg');
     height: 294px;
   }
 
   &.java {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/java_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/java_tsum304.jpg');
     height: 192px;
   }
 
   &.kuril {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/kuril_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/kuril_tsum304.jpg');
     height: 350px;
   }
 
   &.middleeast {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/middleeast_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/middleeast_tsum304.jpg');
     height: 204px;
   }
 
   &.newguinea {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/newguinea_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/newguinea_tsum304.jpg');
     height: 168px;
   }
 
   &.philippinesea {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/philippinesea_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/philippinesea_tsum304.jpg');
     height: 294px;
   }
 
   &.southamerica {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/southamerica_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/southamerica_tsum304.jpg');
     height: 350px;
   }
 
   &.sumatra {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/sumatra_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/sumatra_tsum304.jpg');
     height: 434px;
   }
 
   &.mexico {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/mexico_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/mexico_tsum304.jpg');
     height: 192px;
   }
 
   &.mediterranean {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/mediterranean_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/mediterranean_tsum304.jpg');
     height: 204px;
   }
 
   &.qcf {
-    background-image: url('http://earthquake.usgs.gov/earthquakes/tectonic/images/qcf_tsum304.jpg');
+    background-image: url('https://earthquake.usgs.gov/earthquakes/tectonic/images/qcf_tsum304.jpg');
     height: 390px;
   }
 }
