--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -3,6 +3,7 @@
 
 @import 'leaflet/control/_Control.scss';
 @import 'leaflet/control/_HazDevLayers.scss';
+@import 'leaflet/control/_Legend.scss';
 @import 'leaflet/control/_MousePosition.scss';
 @import 'leaflet/control/_Scale.scss';
 @import 'leaflet/control/_Zoom.scss';
