--- a/src/htdocs/css/event.scss
+++ b/src/htdocs/css/event.scss
@@ -39,6 +39,7 @@
 @import 'dyfi/_DYFIView.scss';
 @import 'dyfi/_DYFIFormView.scss';
 @import 'dyfi/_DYFIIntensityGraphView.scss';
+@import 'dyfi/_DYFIResponsesGraphView.scss';
 @import 'dyfi/_DYFIResponsesView.scss';
 @import 'dyfi/_TextQuestionViews.scss';
 
